--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
            <div class="gallery-grids">
                <div class="col-md-6 baner-top">
                    <figure class="effect-bubba">
-                       <a href="../嗨酷APP/index.html" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                       <a href="https://maguofeng.github.io/mgfone/" rel="title" class="b-link-stripe b-animate-go  thickbox">
                            <img src="images/5.jpg" alt="" class="img-responsive" />
                            <figcaption>
                                <h4>嗨酷移动端APP</h4>
