--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
            <div class="gallery-grids">
                <div class="col-md-6 baner-top">
                    <figure class="effect-bubba">
-                       <a href="https://maguofeng.github.io/mgfone/" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                       <a href="https://maguofeng.github.io/mgfone/" rel="title" class="b-link-stripe b-animate-go  thickbox" target="_blank">
                            <img src="images/5.jpg" alt="" class="img-responsive" />
                            <figcaption>
                                <h4>嗨酷移动端APP</h4>
@@ -315,7 +315,7 @@
                </div>
                <div class="col-md-6 baner-top">
                    <figure class="effect-bubba">
-                       <a href="../洛洛/index.html" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                       <a href="../洛洛/index.html" rel="title" class="b-link-stripe b-animate-go  thickbox" target="_blank">
                            <img src="images/4.jpg" alt="" class="img-responsive" />
                            <figcaption>
                                <h4>洛洛社交移动端APP</h4>
@@ -328,7 +328,7 @@
                <div class="baner-row">
                    <div class="col-md-4 baner-bottom">
                        <figure class="effect-bubba">
-                           <a href="http://localhost:3000/index#!/todo" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                           <a href="http://localhost:3000/index#!/todo" rel="title" class="b-link-stripe b-animate-go  thickbox" target="_blank">
                                <img src="images/6.jpg" alt="" class="img-responsive" />
                                <figcaption>
                                    <h4 class="sec">办公应用</h4>
@@ -339,7 +339,7 @@
                    </div>
                    <div class="col-md-4 baner-bottom">
                        <figure class="effect-bubba">
-                           <a href="http://localhost:4000/index" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                           <a href="http://localhost:4000/index" rel="title" class="b-link-stripe b-animate-go  thickbox" target="_blank">
                                <img src="images/7.jpg" alt="" class="img-responsive" >
                                <figcaption>
                                    <h4 class="sec">茗悦国艺</h4>
@@ -350,7 +350,7 @@
                    </div>
                    <div class="col-md-4 baner-bottom">
                        <figure class="effect-bubba">
-                           <a href="../贪吃蛇/dome.html" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                           <a href="../贪吃蛇/dome.html" rel="title" class="b-link-stripe b-animate-go  thickbox" target="_blank">
                                <img src="images/8.jpg" alt="" class="img-responsive" >
                                <figcaption>
                                    <h4 class="sec">贪吃蛇</h4>
@@ -363,7 +363,7 @@
                </div>
                <div class="col-md-6 baner-top">
                    <figure class="effect-bubba">
-                       <a href="http://1608mgf.duapp.com/" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                       <a href="http://1608mgf.duapp.com/" rel="title" class="b-link-stripe b-animate-go  thickbox" target="_blank">
                            <img src="images/2.jpg" alt="" class="img-responsive" />
                            <figcaption>
                                <h4>车网互联</h4>
@@ -375,7 +375,7 @@
                </div>
                <div class="col-md-6 baner-top">
                    <figure class="effect-bubba">
-                       <a href="http://localhost/music/index.php/admin" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                       <a href="http://localhost/music/index.php/admin" rel="title" class="b-link-stripe b-animate-go  thickbox" target="_blank">
                            <img src="images/3.jpg" alt="" class="img-responsive" />
                            <figcaption>
                                <h4>WEB音乐</h4>
@@ -389,7 +389,7 @@
                <div class="baner-row">
                    <div class="col-md-4 baner-bottom">
                        <figure class="effect-bubba">
-                           <a href="../qianyishi/gongsi.html" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                           <a href="../qianyishi/gongsi.html" rel="title" class="b-link-stripe b-animate-go  thickbox" target="_blank">
                                <img src="images/6.jpg" alt="" class="img-responsive" />
                                <figcaption>
                                    <h4 class="sec">潜意识</h4>
@@ -400,7 +400,7 @@
                    </div>
                    <div class="col-md-4 baner-bottom">
                        <figure class="effect-bubba">
-                           <a href="../苹果/index.html" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                           <a href="../苹果/index.html" rel="title" class="b-link-stripe b-animate-go  thickbox" target="_blank">
                                <img src="images/7.jpg" alt="" class="img-responsive" >
                                <figcaption>
                                    <h4 class="sec">web响应式</h4>
@@ -411,7 +411,7 @@
                    </div>
                    <div class="col-md-4 baner-bottom">
                        <figure class="effect-bubba">
-                           <a href="../bootstrap/index.html" rel="title" class="b-link-stripe b-animate-go  thickbox">
+                           <a href="../bootstrap/index.html" rel="title" class="b-link-stripe b-animate-go  thickbox" target="_blank">
                                <img src="images/8.jpg" alt="" class="img-responsive" >
                                <figcaption>
                                    <h4 class="sec">bootstrap</h4>
