--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                </div>
                <div class="col-md-6 baner-top">
                    <figure class="effect-bubba">
-                       <a href="../洛洛/index.html" rel="title" class="b-link-stripe b-animate-go  thickbox" target="_blank">
+                       <a href="https://maguofeng.github.io/mgftwo/" rel="title" class="b-link-stripe b-animate-go  thickbox" target="_blank">
                            <img src="images/4.jpg" alt="" class="img-responsive" />
                            <figcaption>
                                <h4>洛洛社交移动端APP</h4>
